--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -1,23 +1,28 @@
 <?import javafx.scene.layout.BorderPane?>
+
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
-<BorderPane fx:controller="sample.Controller"
+<BorderPane fx:id="mainPanel" fx:controller="sample.Controller"
             xmlns:fx="http://javafx.com/fxml">
     <top>
         <MenuBar>
             <menus>
                 <Menu text="Contacts">
                     <items>
-                        <MenuItem text="Add..." onAction="#showAddContactDialog"/>
+                        <MenuItem text="Add" onAction="#showAddContactDialog"/>
+                    </items>
+                    <items>
+                        <MenuItem text="Edit" onAction="#showEditContactDialog"/>
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
     </top>
+
     <center>
         <TableView fx:id="contactsTable">
             <columns>
